# pdf2csv

./: .gitignore  LICENSE  README.md  pyproject.toml
src/pdf2csv/: model.py
src/pdf2csv/console/: application.py
src/pdf2csv/parsers/standard_chartered/: states.py
src/pdf_bank_statement_extractor/: currencies.py
src/pdf_bank_statement_extractor/standard_chartered/: states.py
src/pdf_to_csv/: model.py  pdf_extractor.py
src/pdf_to_csv/console/: application.py
src/pdf_to_csv/parsers/standard_chartered/: states.py
src/pdf_to_csv/standard_chartered/: states.py
tests/: conftest.py  test_version.py
tests/parsers/standard_chartered/: test_states.py
tests/standard_chartered/: test_states.py
