[tool.poetry]
name = "pdf_bank_statement_extractor"
version = "0.1.0"
description = "Package allowing to extract transactions from a bank statement"
authors = ["David Zucker <davzucky@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pdfplumber = "^0.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
