[tool.poetry]
name = "pdf_to_csv"
version = "0.1.0"
description = "Package allowing to extract transactions from a bank statement"
authors = ["David Zucker <davzucky@hotmail.com>"]
license = "MIT"

[tool.poetry.scripts]
pdf2csv = "pdf_to_csv.console.application:app"

[tool.poetry.dependencies]
python = "^3.9"
pdfplumber = "^0.5"
typer = "^0.4.0"
prettytable = "^2.2.1"
dataclass-csv = "^1.3.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
black = "^21.8b0"
pytest-sugar = "^0.9.4"
pytest-mock = "^3.6.1"
pyproject-flake8 = "^0.0.1a2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.flake8]
max-line-length = 88
max-complexity = 10
